After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771251 - segfault when trying to add/configure a wired connection
segfault when trying to add/configure a wired connection
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.21.x
Other Linux
: Normal major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 771375 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2016-09-11 16:01 UTC by Michael Biebl
Modified: 2016-09-14 14:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backtrace (6.47 KB, text/plain)
2016-09-11 16:02 UTC, Michael Biebl
Details

Description Michael Biebl 2016-09-11 16:01:42 UTC
Version: 3.21.90
Bug-Debian: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=836835

gnome-control-center segfaults when trying to edit a wired connection.
Steps to reproduce:
1/ go to Network/Wired
2/ Add Profile
3/ Under IPv4, try to enter 127.0.0.1 as DNS Server.

The application will crash with the attached backtrace.
Comment 1 Michael Biebl 2016-09-11 16:02:03 UTC
Created attachment 335313 [details]
backtrace
Comment 2 Bastien Nocera 2016-09-13 09:48:16 UTC
commit ca47ff295a1e45598068201633aa2bd0d8fd5b29
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Sep 13 11:45:20 2016 +0200

    network: Fix crash when changing IPv4 DNS
    
    The dns_servers GStrv was not NULL-terminated because we forgot to
    append a NULL item to the GPtrArray that we used to construct it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771251
Comment 3 Bastien Nocera 2016-09-13 16:55:18 UTC
*** Bug 771375 has been marked as a duplicate of this bug. ***
Comment 4 Matteo F. Vescovi 2016-09-13 20:24:27 UTC
(In reply to Bastien Nocera from comment #2)
> commit ca47ff295a1e45598068201633aa2bd0d8fd5b29
> Author: Bastien Nocera <hadess@hadess.net>
> Date:   Tue Sep 13 11:45:20 2016 +0200
> 
>     network: Fix crash when changing IPv4 DNS
>     
>     The dns_servers GStrv was not NULL-terminated because we forgot to
>     append a NULL item to the GPtrArray that we used to construct it.
>     
>     https://bugzilla.gnome.org/show_bug.cgi?id=771251

Actually, the issue is still present.
Tested an up-to-date gnome-control-center 3.21.92 package in Debian.
So, the bug should be re-opened.
Comment 5 Matteo F. Vescovi 2016-09-13 20:25:37 UTC
(In reply to Bastien Nocera from comment #2)
> commit ca47ff295a1e45598068201633aa2bd0d8fd5b29
> Author: Bastien Nocera <hadess@hadess.net>
> Date:   Tue Sep 13 11:45:20 2016 +0200
> 
>     network: Fix crash when changing IPv4 DNS
>     
>     The dns_servers GStrv was not NULL-terminated because we forgot to
>     append a NULL item to the GPtrArray that we used to construct it.
>     
>     https://bugzilla.gnome.org/show_bug.cgi?id=771251

Actually, the issue is still present.
Tested on an up-to-date gnome-control-center 3.21.92 package in Debian.
So, the bug should be re-opened.
Comment 6 Bastien Nocera 2016-09-14 10:31:39 UTC
(In reply to Matteo F. Vescovi from comment #5)
> (In reply to Bastien Nocera from comment #2)
> > commit ca47ff295a1e45598068201633aa2bd0d8fd5b29
> > Author: Bastien Nocera <hadess@hadess.net>
> > Date:   Tue Sep 13 11:45:20 2016 +0200
> > 
> >     network: Fix crash when changing IPv4 DNS
> >     
> >     The dns_servers GStrv was not NULL-terminated because we forgot to
> >     append a NULL item to the GPtrArray that we used to construct it.
> >     
> >     https://bugzilla.gnome.org/show_bug.cgi?id=771251
> 
> Actually, the issue is still present.
> Tested on an up-to-date gnome-control-center 3.21.92 package in Debian.
> So, the bug should be re-opened.

Works fine here, please check your build, and report a new bug with a backtrace.
Comment 7 Matteo F. Vescovi 2016-09-14 14:00:05 UTC
(In reply to Bastien Nocera from comment #6)
> 
> Works fine here, please check your build, and report a new bug with a
> backtrace.

As reported in https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=836835#12 , segfault happens even if "Gateway" field is populated and the crash happens on entiring the last digit.

At:

  http://studiovescovi.eu/pub/network.webm

you can see what I've recorded to show the behaviour.

Hope this helps, really.

Cheers.
Comment 8 Bastien Nocera 2016-09-14 14:05:52 UTC
(In reply to Matteo F. Vescovi from comment #7)
> (In reply to Bastien Nocera from comment #6)
> > 
> > Works fine here, please check your build, and report a new bug with a
> > backtrace.
> 
> As reported in https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=836835#12 ,
> segfault happens even if "Gateway" field is populated and the crash happens
> on entiring the last digit.
> 
> At:
> 
>   http://studiovescovi.eu/pub/network.webm
> 
> you can see what I've recorded to show the behaviour.

Yep, it is a different even if similar bug. You're changing the *Gateway*, not the *DNS*. I couldn't guess that...
Comment 9 Matteo F. Vescovi 2016-09-14 14:18:57 UTC
OK, I'm opening a new bug for that, then.
Thanks.